# rsomics-fasta-translate

./: Cargo.toml  README.md
benches/: bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs  smoke.rs
tests/golden/: degen.fa  degen.seqkit.faa  gap.fa  gap.seqkit.faa  iupac.fa  iupac.seqkit.faa  negframe.m1.seqkit.faa  rna.fa  rna.seqkit.faa  small.seqkit.faa
