[package]
name = "rsomics-fasta-translate"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Translate DNA/RNA FASTA to protein sequences (six-frame)"

[[bin]]
name = "rsomics-fasta-translate"
path = "src/main.rs"

[dependencies]
rsomics-common = { path = "../../../foundation/rsomics-common", version = "0.5" }
rsomics-help = { path = "../../../foundation/rsomics-help", version = "0.3" }
clap.workspace = true
needletail = "0.6"

[lints]
workspace = true
